--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "http://username.github.io"
+url: "http://mghassany.github.io"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
@@ -14,54 +14,61 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: My website
+title: Mohamad Ghassany
 
 # Short description of your site
-description: A virtual proof that name is awesome!
+description: Data scientist
 
 # --- Navigation bar options --- #
 
 # List of links in the navigation bar
 navbar-links:
-  About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
-    - Learn markdown: "http://www.markdowntutorial.com/"
-    - GitHub Pages: "https://pages.github.com/"
-  Author's home: "http://deanattali.com"
+  Home: ""
+  Research:
+    - Projects : "research/projects"
+    - Phd Thesis : "research/myphd"
+    - Publications : "research/publications"
+  Teaching: "teaching"
+  Blog: "blog"
+  # About Me: "aboutme"
+  # Resources:
+  #   - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
+  #   - Learn markdown: "http://www.markdowntutorial.com/"
+  #   - GitHub Pages: "https://pages.github.com/"
+  # Author's home: "http://deanattali.com"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/avatar-icon.png"
+avatar: "/img/mypic.png"
 
 # --- Footer options --- #
 
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: Some Person
-  email: "youremail@domain.com"
-  facebook: yourname  # eg. daattali
-  github: yourname    # eg. daattali
-  twitter: yourname   # eg. daattali
-  google-plus: +yourname   # eg. +DeanAttali or 109424658772469020925
-  linkedin: yourname  # eg. daattali
-  xing: yourname      # eg. daattali
-  stackoverflow: yourlink  # eg. "3943160/daattali"
-  snapchat: yourname  # eg. daattali
-  instagram: yourname # eg. daattali
-  youtube: yourlink   # eg. user/daattali or channel/daattali
-  spotify: yourname   # eg. daattali
+  name: Mohamad Ghassany
+  linkedin: mghassany  # eg. daattali
+  email: "m.ghassany@gmail.com"
+  # facebook: yourname  # eg. daattali
+  # github: yourname    # eg. daattali
+  twitter: m_ghass   # eg. daattali
+  # google-plus: +yourname   # eg. +DeanAttali or 109424658772469020925
+  # xing: yourname      # eg. daattali
+  # stackoverflow: yourlink  # eg. "3943160/daattali"
+  # snapchat: yourname  # eg. daattali
+  # instagram: yourname # eg. daattali
+  # youtube: yourlink   # eg. user/daattali or channel/daattali
+  # spotify: yourname   # eg. daattali
 
 # Select which links to show in the footer
 footer-links-active:
   rss: false
-  facebook: true
+  facebook: false
   email: true
   twitter: true
   google-plus: false
   github: true
-  linkedin: false
+  linkedin: true
   xing: false
   stackoverflow: false
   snapchat: false
@@ -70,17 +77,19 @@ footer-links-active:
   spotify: false
 
 # Select which share links to show in posts
-share-links-active:
-  twitter: true
-  facebook: true
-  google: false
-  linkedin: true
+# share-links-active:
+#   twitter: true
+#   facebook: false
+#   google: false
+#   linkedin: true
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
+
+# url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Misc --- #
+
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
 #disqus: ""
 
@@ -90,14 +99,14 @@ url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
 # Facebook App ID
 # fb_app_id: ""
 
-# Excerpt Word Length
-# Truncates the excerpt to the specified number of words on the index page
-excerpt_length: 50
-
 # --- Don't need to touch anything below here (but you can if you want) --- #
 
+gems: [jekyll-paginate]
+paginate: 5
+paginate_path: "blog/page:num"
+
 # Output options (more information on Jekyll's site)
-timezone: "America/Vancouver"
+timezone: "Europe/Paris"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
@@ -105,6 +114,7 @@ paginate: 5
 
 kramdown:
   input: GFM
+  syntax_highlighter: rouge
 
 # Default YAML values (more information on Jekyll's site)
 defaults:
@@ -115,7 +125,7 @@ defaults:
     values:
       layout: "post"
       comments: true  # add comments to all blog posts
-      social-share: true # add social media sharing buttons to all blog posts
+#      social-share: true # add social media sharing buttons to all blog posts
   -
     scope:
       path: "" # all files
@@ -180,8 +190,43 @@ prose:
           label: "Publish"
           help: "Check to publish post, uncheck to hide."
 
-gems:
-  - jekyll-paginate
+# gems:
+#   - jekyll-paginate
 
 # Beautiful Jekyll / Dean Attali
 # 2fc73a3a967e97599c9763d05e564189
+
+
+# configuration of jekyll-scholar
+
+scholar:
+  # style: bibliography/mycslfile.csl
+  style: acm-siggraph
+  locale: en
+
+  sort_by: year
+  order: descending
+
+  group_by: none
+  group_order: ascending
+
+  source: bibliography
+  bibliography: mybiblio.bib
+  bibliography_template: publications
+  # bibliography_template: "{{reference}}"
+
+  replace_strings: true
+  join_strings:    true
+
+  use_raw_bibtex_entry: true
+  bibtex_filters:
+  - superscript
+  - latex
+
+  details_dir:    bibliography
+  details_layout: bibtex.html
+  details_link:   Details
+ 
+  repository: bibliography/files
+
+  query: "@*"
