--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: Data scientist
 
 # List of links in the navigation bar
 navbar-links:
-  Home: ""
+  About me: ""
   Research:
     - Projects : "research/projects"
     - Phd Thesis : "research/myphd"
