update bio + menu + titltes

--- a/_config.yml
+++ b/_config.yml
@@ -21,13 +21,17 @@ description: Data scientist
 
 # --- Navigation bar options --- #
 
+  # Menu and submenu
+  # Research: "research/projects"
+  #   - Projects : "research/projects"
+  #   - Phd Thesis : "research/myphd"
+  #   - Publications : "research/publications"
+
 # List of links in the navigation bar
 navbar-links:
   About me: ""
-  Research:
-    - Projects : "research/projects"
-    - Phd Thesis : "research/myphd"
-    - Publications : "research/publications"
+  Research: "research"
+  Publications : "publications"
   Teaching: "teaching"
   Blog: "blog"
   # About Me: "aboutme"
