update research + teaching + upload documents

--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ footer-links-active:
 #disqus: ""
 
 # Fill in your Google Analytics ID to track your website using GA
-#google_analytics: ""
+google_analytics: "UA-88489172-1"
 
 # Facebook App ID
 # fb_app_id: ""
@@ -113,7 +113,8 @@ paginate_path: "blog/page:num"
 timezone: "Europe/Paris"
 markdown: kramdown
 highlighter: rouge
-permalink: /:year-:month-:day-:title/
+#permalink: /:year-:month-:day-:title/
+permalink: /blog/:title/
 paginate: 5
 
 kramdown:
