--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ navbar-links:
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/mypic.png"
+avatar: "/img/Ghassany Mohamad _2017_web.jpg"
 
 # --- Footer options --- #
 
